--- a/abduction-server/Cargo.toml
+++ b/abduction-server/Cargo.toml
@@ -5,15 +5,16 @@ edition = "2021"
 
 [dependencies]
 axum = "0.8.4"
+chrono = { version = "0.4.41", features = ["serde"] }
 futures = "0.3.31"
 hyper = { version = "1.6.0", features = ["server"] }
 qubit = { git = "https://github.com/andogq/qubit", branch = "main", version = "0.10.3" }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_with = { version = "3.14.0", features = ["chrono"] }
-sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite"] }
+sqlx = { version = "0.8.6", features = ["chrono", "macros", "runtime-tokio", "sqlite", "uuid"] }
 tokio = { version = "1.47.1", features = ["full"] }
 tokio-stream = { version = "0.1.17", features = ["sync"] }
 tokio-util = { version = "0.7.16", features = ["rt"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
-uuid = "1.17.0"
+uuid = { version = "1.17.0", features = ["v7", "serde"] }
