--- a/abduction-server/Cargo.toml
+++ b/abduction-server/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.98"
 axum = "0.8.4"
 chrono = { version = "0.4.41", features = ["serde"] }
 futures = "0.3.31"
