--- a/gather-player-data/pyproject.toml
+++ b/gather-player-data/pyproject.toml
@@ -1,10 +1,7 @@
 [project]
-name = "get-popular-names"
+name = "gather-player-names"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "gitpython>=3.1.45",
-    "pandas>=2.3.1",
-]
+dependencies = ["gitpython>=3.1.45", "pandas>=2.3.1"]
