--- a/abduction-server/Cargo.toml
+++ b/abduction-server/Cargo.toml
@@ -10,6 +10,7 @@ chrono = { version = "0.4.41", features = ["serde"] }
 futures = "0.3.31"
 hyper = { version = "1.6.0", features = ["server"] }
 qubit = { git = "https://github.com/andogq/qubit", branch = "main", version = "0.10.3" }
+rand = "0.9.2"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_with = { version = "3.14.0", features = ["chrono"] }
 sqlx = { version = "0.8.6", features = ["chrono", "macros", "runtime-tokio", "sqlite", "uuid"] }
