--- a/abduction-server/Cargo.toml
+++ b/abduction-server/Cargo.toml
@@ -9,11 +9,18 @@ axum = "0.8.4"
 chrono = { version = "0.4.41", features = ["serde"] }
 futures = "0.3.31"
 hyper = { version = "1.6.0", features = ["server"] }
+itertools = "0.14.0"
 qubit = { git = "https://github.com/andogq/qubit", branch = "main", version = "0.10.3" }
-rand = "0.9.2"
+rand = { version = "0.9.2" }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_with = { version = "3.14.0", features = ["chrono"] }
-sqlx = { version = "0.8.6", features = ["chrono", "macros", "runtime-tokio", "sqlite", "uuid"] }
+sqlx = { version = "0.8.6", features = [
+    "chrono",
+    "macros",
+    "runtime-tokio",
+    "sqlite",
+    "uuid",
+] }
 tokio = { version = "1.47.1", features = ["full"] }
 tokio-stream = { version = "0.1.17", features = ["sync"] }
 tokio-util = { version = "0.7.16", features = ["rt"] }
