--- a/abduction-site/package.json
+++ b/abduction-site/package.json
@@ -38,6 +38,7 @@
 	},
 	"packageManager": "pnpm@8.14.0+sha1.bb42032ff80dba5f9245bc1b03470d2fa0b7fb2f",
 	"dependencies": {
+		"@giraugh/tools": "^2.3.1",
 		"@qubit-rs/client": "^0.4.5",
 		"@qubit-rs/svelte": "^0.0.6"
 	}
