--- a/abduction-site/package.json
+++ b/abduction-site/package.json
@@ -40,6 +40,7 @@
 	"dependencies": {
 		"@giraugh/tools": "^2.3.1",
 		"@qubit-rs/client": "^0.4.5",
-		"@qubit-rs/svelte": "^0.0.6"
+		"@qubit-rs/svelte": "^0.0.6",
+		"@sveltejs/adapter-node": "^5.3.1"
 	}
 }
