Use feature+cfg to change dev/prod cooldown duration

--- a/abduction-server/Justfile
+++ b/abduction-server/Justfile
@@ -5,7 +5,7 @@ default:
 
 # Run `cargo watch`, which will restart the application automatically as files change.
 dev:
-    cargo watch -c -x run -i data
+    cargo watch -c -x run -i data --features dev
 
 run:
     cargo run
