--- a/abduction-server/Cargo.toml
+++ b/abduction-server/Cargo.toml
@@ -32,6 +32,7 @@ sqlx = { version = "0.8.6", features = [
     "sqlite",
     "uuid",
 ] }
+strum = { version = "0.27.2", features = ["derive"] }
 tokio = { version = "1.47.1", features = ["full"] }
 tokio-stream = { version = "0.1.17", features = ["sync"] }
 tokio-util = { version = "0.7.16", features = ["rt"] }
