--- a/abduction-server/config/deploy.yml
+++ b/abduction-server/config/deploy.yml
@@ -19,7 +19,7 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   # ssl: true
-  host: app.example.com
+  host: abduction.giraugh.xyz
   path_prefix: "/_"
   app_port: 9944
 
@@ -41,6 +41,7 @@ builder:
 env:
   clear:
     DATABASE_URL: "sqlite:///data/db.sqlite?mode=rwc"
+    PLAYER_DATA_PATH: "/data"
 
 # Aliases are triggered with "bin/kamal <alias>". You can overwrite arguments on invocation:
 # "bin/kamal app logs -r job" will tail logs from the first server in the job section.
