--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup CD
-        uses: ./.github/actions/setup-cd.yaml
+        uses: ./.github/actions/setup-cd
         with:
           ssh_key: ${{ secrets.SSH_KEY }}
           ssh_host: ${{ vars.SSH_HOST }}
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup CD
-        uses: ./.github/actions/setup-cd.yaml
+        uses: ./.github/actions/setup-cd
         with:
           ssh_key: ${{ secrets.SSH_KEY }}
           ssh_host: ${{ vars.SSH_HOST }}
