--- a/.github/actions/setup-cd/action.yaml
+++ b/.github/actions/setup-cd/action.yaml
@@ -14,6 +14,9 @@ runs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    - name: Expose GitHub Runtime for cache
+      uses: crazy-max/ghaction-github-runtime@v3
+
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
