--- a/abduction-server/config/deploy.yml
+++ b/abduction-server/config/deploy.yml
@@ -33,6 +33,10 @@ registry:
 # Configure builder setup.
 builder:
   arch: amd64
+  cache:
+    type: gha
+    options: mode=max
+    image: abduction-server-cache
   # Pass in additional build args needed for your Dockerfile.
   # args:
   #   RUBY_VERSION: <%= ENV["RBENV_VERSION"] || ENV["rvm_ruby_string"] || "#{RUBY_ENGINE}-#{RUBY_ENGINE_VERSION}" %>
