--- a/abduction-server/Cargo.toml
+++ b/abduction-server/Cargo.toml
@@ -24,7 +24,7 @@ itertools = "0.14.0"
 qubit = { git = "https://github.com/andogq/qubit", branch = "main", version = "0.10.3" }
 rand = { version = "0.9.2" }
 serde = { version = "1.0.219", features = ["derive"] }
-serde_with = { version = "3.14.0", features = ["chrono"] }
+serde_with = { version = "3.14.0", features = ["chrono", "macros"] }
 sqlx = { version = "0.8.6", features = [
     "chrono",
     "macros",
