--- a/abduction-server/Cargo.toml
+++ b/abduction-server/Cargo.toml
@@ -21,7 +21,7 @@ derive_more = { version = "2.0.1", features = [
 futures = "0.3.31"
 hyper = { version = "1.6.0", features = ["server"] }
 itertools = "0.14.0"
-qubit = { git = "https://github.com/andogq/qubit", branch = "main", version = "0.10.3" }
+qubit = { git = "https://github.com/giraugh/qubit", branch = "fix/disconnect-err", version = "1.0.0-beta.0" }
 rand = { version = "0.9.2" }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_with = { version = "3.14.0", features = ["chrono", "macros"] }
