--- a/abduction-server/Cargo.toml
+++ b/abduction-server/Cargo.toml
@@ -24,6 +24,7 @@ itertools = "0.14.0"
 qubit = { git = "https://github.com/giraugh/qubit", branch = "fix/disconnect-err", version = "1.0.0-beta.0" }
 rand = { version = "0.9.2" }
 serde = { version = "1.0.219", features = ["derive"] }
+serde_repr = "0.1.20"
 serde_with = { version = "3.14.0", features = ["chrono", "macros"] }
 sqlx = { version = "0.8.6", features = [
     "chrono",
